@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,19 +12,11 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.gl;
 
-import org.overrun.glib.Pointer;
+import org.overrun.glib.Struct;
 
 import java.lang.foreign.*;
 import java.lang.foreign.MemoryLayout.PathElement;
@@ -46,52 +38,51 @@ import java.lang.invoke.VarHandle;
  * @author squid233
  * @since 0.1.0
  */
-public class DrawArraysIndirectCommand extends Pointer {
+public class DrawArraysIndirectCommand extends Struct {
     /**
      * The struct layout.
      */
-    public static final GroupLayout LAYOUT =
-            MemoryLayout.structLayout(
-                    ValueLayout.JAVA_INT.withName("count"),
-                    ValueLayout.JAVA_INT.withName("primCount"),
-                    ValueLayout.JAVA_INT.withName("first"),
-                    ValueLayout.JAVA_INT.withName("baseInstance")
-            ).withName("DrawArraysIndirectCommand");
+    public static final StructLayout LAYOUT = MemoryLayout.structLayout(
+        ValueLayout.JAVA_INT.withName("count"),
+        ValueLayout.JAVA_INT.withName("primCount"),
+        ValueLayout.JAVA_INT.withName("first"),
+        ValueLayout.JAVA_INT.withName("baseInstance")
+    );
     private static final VarHandle
-            pCount = LAYOUT.varHandle(PathElement.groupElement("count")),
-            pPrimCount = LAYOUT.varHandle(PathElement.groupElement("primCount")),
-            pFirst = LAYOUT.varHandle(PathElement.groupElement("first")),
-            pBaseInstance = LAYOUT.varHandle(PathElement.groupElement("baseInstance"));
+        pCount = LAYOUT.varHandle(PathElement.groupElement("count")),
+        pPrimCount = LAYOUT.varHandle(PathElement.groupElement("primCount")),
+        pFirst = LAYOUT.varHandle(PathElement.groupElement("first")),
+        pBaseInstance = LAYOUT.varHandle(PathElement.groupElement("baseInstance"));
 
     /**
      * Create the pointer instance.
      *
-     * @param address the address
-     * @param scope   the segment scope
+     * @param address the address.
+     * @param arena   the arena of this address.
      */
-    public DrawArraysIndirectCommand(Addressable address, MemorySession scope) {
-        super(address, scope);
+    public DrawArraysIndirectCommand(MemorySegment address, Arena arena) {
+        super(address, arena);
     }
 
     /**
-     * Creates a command instance with the given segment scope.
+     * Creates a command instance with the given arena.
      *
-     * @param scope the segment scope
+     * @param arena the arena
      * @return the instance
      */
-    public static DrawArraysIndirectCommand create(MemorySession scope) {
-        return new DrawArraysIndirectCommand(scope.allocate(LAYOUT), scope);
+    public static DrawArraysIndirectCommand create(Arena arena) {
+        return new DrawArraysIndirectCommand(arena.allocate(LAYOUT), arena);
     }
 
     /**
-     * Creates a command instance with the given segment scope and count.
+     * Creates a command instance with the given arena and count.
      *
-     * @param scope the segment scope
+     * @param arena the arena
      * @param count the count
      * @return the instance
      */
-    public static Buffer create(MemorySession scope, long count) {
-        return new Buffer(scope.allocateArray(LAYOUT, count), scope, count);
+    public static Buffer create(Arena arena, long count) {
+        return new Buffer(arena.allocateArray(LAYOUT, count), arena, count);
     }
 
     /**
@@ -101,7 +92,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return this
      */
     public DrawArraysIndirectCommand count(int count) {
-        pCount.set(segment(LAYOUT, scope), count);
+        pCount.set(managedSegment, count);
         return this;
     }
 
@@ -112,7 +103,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return this
      */
     public DrawArraysIndirectCommand primCount(int primCount) {
-        pPrimCount.set(segment(LAYOUT, scope), primCount);
+        pPrimCount.set(managedSegment, primCount);
         return this;
     }
 
@@ -123,7 +114,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return this
      */
     public DrawArraysIndirectCommand first(int first) {
-        pFirst.set(segment(LAYOUT, scope), first);
+        pFirst.set(managedSegment, first);
         return this;
     }
 
@@ -134,7 +125,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return this
      */
     public DrawArraysIndirectCommand baseInstance(int baseInstance) {
-        pBaseInstance.set(segment(LAYOUT, scope), baseInstance);
+        pBaseInstance.set(managedSegment, baseInstance);
         return this;
     }
 
@@ -144,7 +135,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return the count
      */
     public int count() {
-        return (int) pCount.get(segment(LAYOUT, scope));
+        return (int) pCount.get(managedSegment);
     }
 
     /**
@@ -153,7 +144,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return the primitive count
      */
     public int primCount() {
-        return (int) pPrimCount.get(segment(LAYOUT, scope));
+        return (int) pPrimCount.get(managedSegment);
     }
 
     /**
@@ -162,7 +153,7 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return the first
      */
     public int first() {
-        return (int) pFirst.get(segment(LAYOUT, scope));
+        return (int) pFirst.get(managedSegment);
     }
 
     /**
@@ -171,7 +162,12 @@ public class DrawArraysIndirectCommand extends Pointer {
      * @return the base instance
      */
     public int baseInstance() {
-        return (int) pBaseInstance.get(segment(LAYOUT, scope));
+        return (int) pBaseInstance.get(managedSegment);
+    }
+
+    @Override
+    public MemoryLayout layout() {
+        return LAYOUT;
     }
 
     /**
@@ -183,22 +179,24 @@ public class DrawArraysIndirectCommand extends Pointer {
     public static class Buffer extends DrawArraysIndirectCommand {
         private final long elementCount;
         private final VarHandle pCount, pPrimCount, pFirst, pBaseInstance;
+        private final SequenceLayout layout;
 
         /**
          * Create the pointer instance.
          *
-         * @param address      the address
-         * @param scope        the segment scope
+         * @param address      the address.
+         * @param arena        the arena of this address.
          * @param elementCount the element count
          */
-        public Buffer(Addressable address, MemorySession scope, long elementCount) {
-            super(address, scope);
+        public Buffer(MemorySegment address, Arena arena, long elementCount) {
+            super(address, arena);
             this.elementCount = elementCount;
-            var layout = MemoryLayout.sequenceLayout(elementCount, LAYOUT);
+            this.layout = MemoryLayout.sequenceLayout(elementCount, LAYOUT);
             pCount = layout.varHandle(PathElement.sequenceElement(), PathElement.groupElement("count"));
             pPrimCount = layout.varHandle(PathElement.sequenceElement(), PathElement.groupElement("primCount"));
             pFirst = layout.varHandle(PathElement.sequenceElement(), PathElement.groupElement("first"));
             pBaseInstance = layout.varHandle(PathElement.sequenceElement(), PathElement.groupElement("baseInstance"));
+            managedSegment = segment(layout, arena);
         }
 
         /**
@@ -218,7 +216,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return this
          */
         public Buffer count(long index, int count) {
-            pCount.set(segment(LAYOUT, scope), index, count);
+            pCount.set(managedSegment, index, count);
             return this;
         }
 
@@ -230,7 +228,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return this
          */
         public Buffer primCount(long index, int primCount) {
-            pPrimCount.set(segment(LAYOUT, scope), index, primCount);
+            pPrimCount.set(managedSegment, index, primCount);
             return this;
         }
 
@@ -242,7 +240,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return this
          */
         public Buffer first(long index, int first) {
-            pFirst.set(segment(LAYOUT, scope), index, first);
+            pFirst.set(managedSegment, index, first);
             return this;
         }
 
@@ -254,7 +252,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return this
          */
         public Buffer baseInstance(long index, int baseInstance) {
-            pBaseInstance.set(segment(LAYOUT, scope), index, baseInstance);
+            pBaseInstance.set(managedSegment, index, baseInstance);
             return this;
         }
 
@@ -285,7 +283,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return the count
          */
         public int countAt(long index) {
-            return (int) pCount.get(segment(LAYOUT, scope), index);
+            return (int) pCount.get(managedSegment, index);
         }
 
         /**
@@ -295,7 +293,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return the primitive count
          */
         public int primCountAt(long index) {
-            return (int) pPrimCount.get(segment(LAYOUT, scope), index);
+            return (int) pPrimCount.get(managedSegment, index);
         }
 
         /**
@@ -305,7 +303,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return the first
          */
         public int firstAt(long index) {
-            return (int) pFirst.get(segment(LAYOUT, scope), index);
+            return (int) pFirst.get(managedSegment, index);
         }
 
         /**
@@ -315,7 +313,7 @@ public class DrawArraysIndirectCommand extends Pointer {
          * @return the base instance
          */
         public int baseInstanceAt(long index) {
-            return (int) pBaseInstance.get(segment(LAYOUT, scope), index);
+            return (int) pBaseInstance.get(managedSegment, index);
         }
 
         @Override
@@ -336,6 +334,11 @@ public class DrawArraysIndirectCommand extends Pointer {
         @Override
         public int baseInstance() {
             return baseInstanceAt(0);
+        }
+
+        @Override
+        public SequenceLayout layout() {
+            return layout;
         }
     }
 }
