@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,14 +12,6 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.gl;
@@ -28,7 +20,9 @@ import org.jetbrains.annotations.Nullable;
 import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.util.MemoryStack;
 
-import java.lang.foreign.*;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentAllocator;
 
 import static java.lang.foreign.ValueLayout.*;
 import static org.overrun.glib.FunctionDescriptors.*;
@@ -36,11 +30,289 @@ import static org.overrun.glib.gl.GLLoader.*;
 
 /**
  * The OpenGL 4.3 core profile functions.
+ * <p>
+ * These extensions are promoted in this version:
+ * <ul>
+ *     <li>GL_ARB_clear_buffer_object</li>
+ *     <li>GL_ARB_compute_shader</li>
+ *     <li>GL_ARB_copy_image</li>
+ *     <li>{@linkplain org.overrun.glib.gl.ext.arb.GLARBDebugOutput GL_ARB_debug_output}</li>
+ *     <li>GL_ARB_framebuffer_no_attachments</li>
+ *     <li>GL_ARB_internalformat_query2</li>
+ *     <li>GL_ARB_invalidate_subdata</li>
+ *     <li>GL_ARB_multi_draw_indirect</li>
+ *     <li>GL_ARB_program_interface_query</li>
+ *     <li>GL_ARB_shader_storage_buffer_object</li>
+ *     <li>GL_ARB_texture_buffer_range</li>
+ *     <li>GL_ARB_texture_storage_multisample</li>
+ *     <li>GL_ARB_texture_view</li>
+ *     <li>GL_ARB_vertex_attrib_binding</li>
+ *     <li>GL_KHR_debug</li>
+ * </ul>
  *
  * @author squid233
  * @since 0.1.0
  */
 public sealed class GL43C extends GL42C permits GL44C {
+    public static final int NUM_SHADING_LANGUAGE_VERSIONS = 0x82E9;
+    public static final int VERTEX_ATTRIB_ARRAY_LONG = 0x874E;
+    public static final int COMPRESSED_RGB8_ETC2 = 0x9274;
+    public static final int COMPRESSED_SRGB8_ETC2 = 0x9275;
+    public static final int COMPRESSED_RGB8_PUNCHTHROUGH_ALPHA1_ETC2 = 0x9276;
+    public static final int COMPRESSED_SRGB8_PUNCHTHROUGH_ALPHA1_ETC2 = 0x9277;
+    public static final int COMPRESSED_RGBA8_ETC2_EAC = 0x9278;
+    public static final int COMPRESSED_SRGB8_ALPHA8_ETC2_EAC = 0x9279;
+    public static final int COMPRESSED_R11_EAC = 0x9270;
+    public static final int COMPRESSED_SIGNED_R11_EAC = 0x9271;
+    public static final int COMPRESSED_RG11_EAC = 0x9272;
+    public static final int COMPRESSED_SIGNED_RG11_EAC = 0x9273;
+    public static final int PRIMITIVE_RESTART_FIXED_INDEX = 0x8D69;
+    public static final int ANY_SAMPLES_PASSED_CONSERVATIVE = 0x8D6A;
+    public static final int MAX_ELEMENT_INDEX = 0x8D6B;
+    public static final int COMPUTE_SHADER = 0x91B9;
+    public static final int MAX_COMPUTE_UNIFORM_BLOCKS = 0x91BB;
+    public static final int MAX_COMPUTE_TEXTURE_IMAGE_UNITS = 0x91BC;
+    public static final int MAX_COMPUTE_IMAGE_UNIFORMS = 0x91BD;
+    public static final int MAX_COMPUTE_SHARED_MEMORY_SIZE = 0x8262;
+    public static final int MAX_COMPUTE_UNIFORM_COMPONENTS = 0x8263;
+    public static final int MAX_COMPUTE_ATOMIC_COUNTER_BUFFERS = 0x8264;
+    public static final int MAX_COMPUTE_ATOMIC_COUNTERS = 0x8265;
+    public static final int MAX_COMBINED_COMPUTE_UNIFORM_COMPONENTS = 0x8266;
+    public static final int MAX_COMPUTE_WORK_GROUP_INVOCATIONS = 0x90EB;
+    public static final int MAX_COMPUTE_WORK_GROUP_COUNT = 0x91BE;
+    public static final int MAX_COMPUTE_WORK_GROUP_SIZE = 0x91BF;
+    public static final int COMPUTE_WORK_GROUP_SIZE = 0x8267;
+    public static final int UNIFORM_BLOCK_REFERENCED_BY_COMPUTE_SHADER = 0x90EC;
+    public static final int ATOMIC_COUNTER_BUFFER_REFERENCED_BY_COMPUTE_SHADER = 0x90ED;
+    public static final int DISPATCH_INDIRECT_BUFFER = 0x90EE;
+    public static final int DISPATCH_INDIRECT_BUFFER_BINDING = 0x90EF;
+    public static final int COMPUTE_SHADER_BIT = 0x00000020;
+    public static final int DEBUG_OUTPUT_SYNCHRONOUS = 0x8242;
+    public static final int DEBUG_NEXT_LOGGED_MESSAGE_LENGTH = 0x8243;
+    public static final int DEBUG_CALLBACK_FUNCTION = 0x8244;
+    public static final int DEBUG_CALLBACK_USER_PARAM = 0x8245;
+    public static final int DEBUG_SOURCE_API = 0x8246;
+    public static final int DEBUG_SOURCE_WINDOW_SYSTEM = 0x8247;
+    public static final int DEBUG_SOURCE_SHADER_COMPILER = 0x8248;
+    public static final int DEBUG_SOURCE_THIRD_PARTY = 0x8249;
+    public static final int DEBUG_SOURCE_APPLICATION = 0x824A;
+    public static final int DEBUG_SOURCE_OTHER = 0x824B;
+    public static final int DEBUG_TYPE_ERROR = 0x824C;
+    public static final int DEBUG_TYPE_DEPRECATED_BEHAVIOR = 0x824D;
+    public static final int DEBUG_TYPE_UNDEFINED_BEHAVIOR = 0x824E;
+    public static final int DEBUG_TYPE_PORTABILITY = 0x824F;
+    public static final int DEBUG_TYPE_PERFORMANCE = 0x8250;
+    public static final int DEBUG_TYPE_OTHER = 0x8251;
+    public static final int MAX_DEBUG_MESSAGE_LENGTH = 0x9143;
+    public static final int MAX_DEBUG_LOGGED_MESSAGES = 0x9144;
+    public static final int DEBUG_LOGGED_MESSAGES = 0x9145;
+    public static final int DEBUG_SEVERITY_HIGH = 0x9146;
+    public static final int DEBUG_SEVERITY_MEDIUM = 0x9147;
+    public static final int DEBUG_SEVERITY_LOW = 0x9148;
+    public static final int DEBUG_TYPE_MARKER = 0x8268;
+    public static final int DEBUG_TYPE_PUSH_GROUP = 0x8269;
+    public static final int DEBUG_TYPE_POP_GROUP = 0x826A;
+    public static final int DEBUG_SEVERITY_NOTIFICATION = 0x826B;
+    public static final int MAX_DEBUG_GROUP_STACK_DEPTH = 0x826C;
+    public static final int DEBUG_GROUP_STACK_DEPTH = 0x826D;
+    public static final int BUFFER = 0x82E0;
+    public static final int SHADER = 0x82E1;
+    public static final int PROGRAM = 0x82E2;
+    public static final int QUERY = 0x82E3;
+    public static final int PROGRAM_PIPELINE = 0x82E4;
+    public static final int SAMPLER = 0x82E6;
+    public static final int MAX_LABEL_LENGTH = 0x82E8;
+    public static final int DEBUG_OUTPUT = 0x92E0;
+    public static final int CONTEXT_FLAG_DEBUG_BIT = 0x00000002;
+    public static final int MAX_UNIFORM_LOCATIONS = 0x826E;
+    public static final int FRAMEBUFFER_DEFAULT_WIDTH = 0x9310;
+    public static final int FRAMEBUFFER_DEFAULT_HEIGHT = 0x9311;
+    public static final int FRAMEBUFFER_DEFAULT_LAYERS = 0x9312;
+    public static final int FRAMEBUFFER_DEFAULT_SAMPLES = 0x9313;
+    public static final int FRAMEBUFFER_DEFAULT_FIXED_SAMPLE_LOCATIONS = 0x9314;
+    public static final int MAX_FRAMEBUFFER_WIDTH = 0x9315;
+    public static final int MAX_FRAMEBUFFER_HEIGHT = 0x9316;
+    public static final int MAX_FRAMEBUFFER_LAYERS = 0x9317;
+    public static final int MAX_FRAMEBUFFER_SAMPLES = 0x9318;
+    public static final int INTERNALFORMAT_SUPPORTED = 0x826F;
+    public static final int INTERNALFORMAT_PREFERRED = 0x8270;
+    public static final int INTERNALFORMAT_RED_SIZE = 0x8271;
+    public static final int INTERNALFORMAT_GREEN_SIZE = 0x8272;
+    public static final int INTERNALFORMAT_BLUE_SIZE = 0x8273;
+    public static final int INTERNALFORMAT_ALPHA_SIZE = 0x8274;
+    public static final int INTERNALFORMAT_DEPTH_SIZE = 0x8275;
+    public static final int INTERNALFORMAT_STENCIL_SIZE = 0x8276;
+    public static final int INTERNALFORMAT_SHARED_SIZE = 0x8277;
+    public static final int INTERNALFORMAT_RED_TYPE = 0x8278;
+    public static final int INTERNALFORMAT_GREEN_TYPE = 0x8279;
+    public static final int INTERNALFORMAT_BLUE_TYPE = 0x827A;
+    public static final int INTERNALFORMAT_ALPHA_TYPE = 0x827B;
+    public static final int INTERNALFORMAT_DEPTH_TYPE = 0x827C;
+    public static final int INTERNALFORMAT_STENCIL_TYPE = 0x827D;
+    public static final int MAX_WIDTH = 0x827E;
+    public static final int MAX_HEIGHT = 0x827F;
+    public static final int MAX_DEPTH = 0x8280;
+    public static final int MAX_LAYERS = 0x8281;
+    public static final int MAX_COMBINED_DIMENSIONS = 0x8282;
+    public static final int COLOR_COMPONENTS = 0x8283;
+    public static final int DEPTH_COMPONENTS = 0x8284;
+    public static final int STENCIL_COMPONENTS = 0x8285;
+    public static final int COLOR_RENDERABLE = 0x8286;
+    public static final int DEPTH_RENDERABLE = 0x8287;
+    public static final int STENCIL_RENDERABLE = 0x8288;
+    public static final int FRAMEBUFFER_RENDERABLE = 0x8289;
+    public static final int FRAMEBUFFER_RENDERABLE_LAYERED = 0x828A;
+    public static final int FRAMEBUFFER_BLEND = 0x828B;
+    public static final int READ_PIXELS = 0x828C;
+    public static final int READ_PIXELS_FORMAT = 0x828D;
+    public static final int READ_PIXELS_TYPE = 0x828E;
+    public static final int TEXTURE_IMAGE_FORMAT = 0x828F;
+    public static final int TEXTURE_IMAGE_TYPE = 0x8290;
+    public static final int GET_TEXTURE_IMAGE_FORMAT = 0x8291;
+    public static final int GET_TEXTURE_IMAGE_TYPE = 0x8292;
+    public static final int MIPMAP = 0x8293;
+    public static final int MANUAL_GENERATE_MIPMAP = 0x8294;
+    public static final int AUTO_GENERATE_MIPMAP = 0x8295;
+    public static final int COLOR_ENCODING = 0x8296;
+    public static final int SRGB_READ = 0x8297;
+    public static final int SRGB_WRITE = 0x8298;
+    public static final int FILTER = 0x829A;
+    public static final int VERTEX_TEXTURE = 0x829B;
+    public static final int TESS_CONTROL_TEXTURE = 0x829C;
+    public static final int TESS_EVALUATION_TEXTURE = 0x829D;
+    public static final int GEOMETRY_TEXTURE = 0x829E;
+    public static final int FRAGMENT_TEXTURE = 0x829F;
+    public static final int COMPUTE_TEXTURE = 0x82A0;
+    public static final int TEXTURE_SHADOW = 0x82A1;
+    public static final int TEXTURE_GATHER = 0x82A2;
+    public static final int TEXTURE_GATHER_SHADOW = 0x82A3;
+    public static final int SHADER_IMAGE_LOAD = 0x82A4;
+    public static final int SHADER_IMAGE_STORE = 0x82A5;
+    public static final int SHADER_IMAGE_ATOMIC = 0x82A6;
+    public static final int IMAGE_TEXEL_SIZE = 0x82A7;
+    public static final int IMAGE_COMPATIBILITY_CLASS = 0x82A8;
+    public static final int IMAGE_PIXEL_FORMAT = 0x82A9;
+    public static final int IMAGE_PIXEL_TYPE = 0x82AA;
+    public static final int SIMULTANEOUS_TEXTURE_AND_DEPTH_TEST = 0x82AC;
+    public static final int SIMULTANEOUS_TEXTURE_AND_STENCIL_TEST = 0x82AD;
+    public static final int SIMULTANEOUS_TEXTURE_AND_DEPTH_WRITE = 0x82AE;
+    public static final int SIMULTANEOUS_TEXTURE_AND_STENCIL_WRITE = 0x82AF;
+    public static final int TEXTURE_COMPRESSED_BLOCK_WIDTH = 0x82B1;
+    public static final int TEXTURE_COMPRESSED_BLOCK_HEIGHT = 0x82B2;
+    public static final int TEXTURE_COMPRESSED_BLOCK_SIZE = 0x82B3;
+    public static final int CLEAR_BUFFER = 0x82B4;
+    public static final int TEXTURE_VIEW = 0x82B5;
+    public static final int VIEW_COMPATIBILITY_CLASS = 0x82B6;
+    public static final int FULL_SUPPORT = 0x82B7;
+    public static final int CAVEAT_SUPPORT = 0x82B8;
+    public static final int IMAGE_CLASS_4_X_32 = 0x82B9;
+    public static final int IMAGE_CLASS_2_X_32 = 0x82BA;
+    public static final int IMAGE_CLASS_1_X_32 = 0x82BB;
+    public static final int IMAGE_CLASS_4_X_16 = 0x82BC;
+    public static final int IMAGE_CLASS_2_X_16 = 0x82BD;
+    public static final int IMAGE_CLASS_1_X_16 = 0x82BE;
+    public static final int IMAGE_CLASS_4_X_8 = 0x82BF;
+    public static final int IMAGE_CLASS_2_X_8 = 0x82C0;
+    public static final int IMAGE_CLASS_1_X_8 = 0x82C1;
+    public static final int IMAGE_CLASS_11_11_10 = 0x82C2;
+    public static final int IMAGE_CLASS_10_10_10_2 = 0x82C3;
+    public static final int VIEW_CLASS_128_BITS = 0x82C4;
+    public static final int VIEW_CLASS_96_BITS = 0x82C5;
+    public static final int VIEW_CLASS_64_BITS = 0x82C6;
+    public static final int VIEW_CLASS_48_BITS = 0x82C7;
+    public static final int VIEW_CLASS_32_BITS = 0x82C8;
+    public static final int VIEW_CLASS_24_BITS = 0x82C9;
+    public static final int VIEW_CLASS_16_BITS = 0x82CA;
+    public static final int VIEW_CLASS_8_BITS = 0x82CB;
+    public static final int VIEW_CLASS_S3TC_DXT1_RGB = 0x82CC;
+    public static final int VIEW_CLASS_S3TC_DXT1_RGBA = 0x82CD;
+    public static final int VIEW_CLASS_S3TC_DXT3_RGBA = 0x82CE;
+    public static final int VIEW_CLASS_S3TC_DXT5_RGBA = 0x82CF;
+    public static final int VIEW_CLASS_RGTC1_RED = 0x82D0;
+    public static final int VIEW_CLASS_RGTC2_RG = 0x82D1;
+    public static final int VIEW_CLASS_BPTC_UNORM = 0x82D2;
+    public static final int VIEW_CLASS_BPTC_FLOAT = 0x82D3;
+    public static final int UNIFORM = 0x92E1;
+    public static final int UNIFORM_BLOCK = 0x92E2;
+    public static final int PROGRAM_INPUT = 0x92E3;
+    public static final int PROGRAM_OUTPUT = 0x92E4;
+    public static final int BUFFER_VARIABLE = 0x92E5;
+    public static final int SHADER_STORAGE_BLOCK = 0x92E6;
+    public static final int VERTEX_SUBROUTINE = 0x92E8;
+    public static final int TESS_CONTROL_SUBROUTINE = 0x92E9;
+    public static final int TESS_EVALUATION_SUBROUTINE = 0x92EA;
+    public static final int GEOMETRY_SUBROUTINE = 0x92EB;
+    public static final int FRAGMENT_SUBROUTINE = 0x92EC;
+    public static final int COMPUTE_SUBROUTINE = 0x92ED;
+    public static final int VERTEX_SUBROUTINE_UNIFORM = 0x92EE;
+    public static final int TESS_CONTROL_SUBROUTINE_UNIFORM = 0x92EF;
+    public static final int TESS_EVALUATION_SUBROUTINE_UNIFORM = 0x92F0;
+    public static final int GEOMETRY_SUBROUTINE_UNIFORM = 0x92F1;
+    public static final int FRAGMENT_SUBROUTINE_UNIFORM = 0x92F2;
+    public static final int COMPUTE_SUBROUTINE_UNIFORM = 0x92F3;
+    public static final int TRANSFORM_FEEDBACK_VARYING = 0x92F4;
+    public static final int ACTIVE_RESOURCES = 0x92F5;
+    public static final int MAX_NAME_LENGTH = 0x92F6;
+    public static final int MAX_NUM_ACTIVE_VARIABLES = 0x92F7;
+    public static final int MAX_NUM_COMPATIBLE_SUBROUTINES = 0x92F8;
+    public static final int NAME_LENGTH = 0x92F9;
+    public static final int TYPE = 0x92FA;
+    public static final int ARRAY_SIZE = 0x92FB;
+    public static final int OFFSET = 0x92FC;
+    public static final int BLOCK_INDEX = 0x92FD;
+    public static final int ARRAY_STRIDE = 0x92FE;
+    public static final int MATRIX_STRIDE = 0x92FF;
+    public static final int IS_ROW_MAJOR = 0x9300;
+    public static final int ATOMIC_COUNTER_BUFFER_INDEX = 0x9301;
+    public static final int BUFFER_BINDING = 0x9302;
+    public static final int BUFFER_DATA_SIZE = 0x9303;
+    public static final int NUM_ACTIVE_VARIABLES = 0x9304;
+    public static final int ACTIVE_VARIABLES = 0x9305;
+    public static final int REFERENCED_BY_VERTEX_SHADER = 0x9306;
+    public static final int REFERENCED_BY_TESS_CONTROL_SHADER = 0x9307;
+    public static final int REFERENCED_BY_TESS_EVALUATION_SHADER = 0x9308;
+    public static final int REFERENCED_BY_GEOMETRY_SHADER = 0x9309;
+    public static final int REFERENCED_BY_FRAGMENT_SHADER = 0x930A;
+    public static final int REFERENCED_BY_COMPUTE_SHADER = 0x930B;
+    public static final int TOP_LEVEL_ARRAY_SIZE = 0x930C;
+    public static final int TOP_LEVEL_ARRAY_STRIDE = 0x930D;
+    public static final int LOCATION = 0x930E;
+    public static final int LOCATION_INDEX = 0x930F;
+    public static final int IS_PER_PATCH = 0x92E7;
+    public static final int SHADER_STORAGE_BUFFER = 0x90D2;
+    public static final int SHADER_STORAGE_BUFFER_BINDING = 0x90D3;
+    public static final int SHADER_STORAGE_BUFFER_START = 0x90D4;
+    public static final int SHADER_STORAGE_BUFFER_SIZE = 0x90D5;
+    public static final int MAX_VERTEX_SHADER_STORAGE_BLOCKS = 0x90D6;
+    public static final int MAX_GEOMETRY_SHADER_STORAGE_BLOCKS = 0x90D7;
+    public static final int MAX_TESS_CONTROL_SHADER_STORAGE_BLOCKS = 0x90D8;
+    public static final int MAX_TESS_EVALUATION_SHADER_STORAGE_BLOCKS = 0x90D9;
+    public static final int MAX_FRAGMENT_SHADER_STORAGE_BLOCKS = 0x90DA;
+    public static final int MAX_COMPUTE_SHADER_STORAGE_BLOCKS = 0x90DB;
+    public static final int MAX_COMBINED_SHADER_STORAGE_BLOCKS = 0x90DC;
+    public static final int MAX_SHADER_STORAGE_BUFFER_BINDINGS = 0x90DD;
+    public static final int MAX_SHADER_STORAGE_BLOCK_SIZE = 0x90DE;
+    public static final int SHADER_STORAGE_BUFFER_OFFSET_ALIGNMENT = 0x90DF;
+    public static final int SHADER_STORAGE_BARRIER_BIT = 0x00002000;
+    public static final int MAX_COMBINED_SHADER_OUTPUT_RESOURCES = 0x8F39;
+    public static final int DEPTH_STENCIL_TEXTURE_MODE = 0x90EA;
+    public static final int TEXTURE_BUFFER_OFFSET = 0x919D;
+    public static final int TEXTURE_BUFFER_SIZE = 0x919E;
+    public static final int TEXTURE_BUFFER_OFFSET_ALIGNMENT = 0x919F;
+    public static final int TEXTURE_VIEW_MIN_LEVEL = 0x82DB;
+    public static final int TEXTURE_VIEW_NUM_LEVELS = 0x82DC;
+    public static final int TEXTURE_VIEW_MIN_LAYER = 0x82DD;
+    public static final int TEXTURE_VIEW_NUM_LAYERS = 0x82DE;
+    public static final int TEXTURE_IMMUTABLE_LEVELS = 0x82DF;
+    public static final int VERTEX_ATTRIB_BINDING = 0x82D4;
+    public static final int VERTEX_ATTRIB_RELATIVE_OFFSET = 0x82D5;
+    public static final int VERTEX_BINDING_DIVISOR = 0x82D6;
+    public static final int VERTEX_BINDING_OFFSET = 0x82D7;
+    public static final int VERTEX_BINDING_STRIDE = 0x82D8;
+    public static final int MAX_VERTEX_ATTRIB_RELATIVE_OFFSET = 0x82D9;
+    public static final int MAX_VERTEX_ATTRIB_BINDINGS = 0x82DA;
+    public static final int VERTEX_BINDING_BUFFER = 0x8F4F;
+
     static boolean isSupported(GLCapabilities caps) {
         return checkAll(caps.glBindVertexBuffer, caps.glClearBufferData, caps.glClearBufferSubData, caps.glCopyImageSubData, caps.glDebugMessageCallback, caps.glDebugMessageControl,
             caps.glDebugMessageInsert, caps.glDispatchCompute, caps.glDispatchComputeIndirect, caps.glFramebufferParameteri, caps.glGetDebugMessageLog, caps.glGetFramebufferParameteriv,
@@ -108,7 +380,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void clearBufferData(int target, int internalFormat, int format, int type, Addressable data) {
+    public static void clearBufferData(int target, int internalFormat, int format, int type, MemorySegment data) {
         var caps = getCapabilities();
         try {
             check(caps.glClearBufferData).invokeExact(target, internalFormat, format, type, data);
@@ -117,7 +389,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void clearBufferSubData(int target, int internalFormat, long offset, long size, int format, int type, Addressable data) {
+    public static void clearBufferSubData(int target, int internalFormat, long offset, long size, int format, int type, MemorySegment data) {
         var caps = getCapabilities();
         try {
             check(caps.glClearBufferSubData).invokeExact(target, internalFormat, offset, size, format, type, data);
@@ -135,7 +407,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void debugMessageCallback(Addressable callback, Addressable userParam) {
+    public static void debugMessageCallback(MemorySegment callback, MemorySegment userParam) {
         var caps = getCapabilities();
         try {
             check(caps.glDebugMessageCallback).invokeExact(callback, userParam);
@@ -144,11 +416,11 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void debugMessageCallback(MemorySession scope, GLDebugProc callback, Addressable userParam) {
-        debugMessageCallback(callback.address(scope), userParam);
+    public static void debugMessageCallback(Arena arena, GLDebugProc callback, MemorySegment userParam) {
+        debugMessageCallback(callback.address(arena), userParam);
     }
 
-    public static void debugMessageControl(int source, int type, int severity, int count, Addressable ids, boolean enabled) {
+    public static void debugMessageControl(int source, int type, int severity, int count, MemorySegment ids, boolean enabled) {
         var caps = getCapabilities();
         try {
             check(caps.glDebugMessageControl).invokeExact(source, type, severity, count, ids, enabled);
@@ -161,7 +433,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         debugMessageControl(source, type, severity, count, allocator.allocateArray(JAVA_INT, ids), enabled);
     }
 
-    public static void debugMessageInsert(int source, int type, int id, int severity, int length, Addressable buf) {
+    public static void debugMessageInsert(int source, int type, int id, int severity, int length, MemorySegment buf) {
         var caps = getCapabilities();
         try {
             check(caps.glDebugMessageInsert).invokeExact(source, type, id, severity, length, buf);
@@ -201,7 +473,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static int getDebugMessageLog(int count, int bufSize, Addressable sources, Addressable types, Addressable ids, Addressable severities, Addressable lengths, Addressable messageLog) {
+    public static int getDebugMessageLog(int count, int bufSize, MemorySegment sources, MemorySegment types, MemorySegment ids, MemorySegment severities, MemorySegment lengths, MemorySegment messageLog) {
         var caps = getCapabilities();
         try {
             return (int) check(caps.glGetDebugMessageLog).invokeExact(count, bufSize, sources, types, ids, severities, lengths, messageLog);
@@ -231,7 +503,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         return num;
     }
 
-    public static void getFramebufferParameteriv(int target, int pname, Addressable params) {
+    public static void getFramebufferParameteriv(int target, int pname, MemorySegment params) {
         var caps = getCapabilities();
         try {
             check(caps.glGetFramebufferParameteriv).invokeExact(target, pname, params);
@@ -252,7 +524,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void getInternalformati64v(int target, int internalFormat, int pname, int count, Addressable params) {
+    public static void getInternalformati64v(int target, int internalFormat, int pname, int count, MemorySegment params) {
         var caps = getCapabilities();
         try {
             check(caps.glGetInternalformati64v).invokeExact(target, internalFormat, pname, count, params);
@@ -279,7 +551,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void getObjectLabel(int identifier, int name, int bufSize, Addressable length, Addressable label) {
+    public static void getObjectLabel(int identifier, int name, int bufSize, MemorySegment length, MemorySegment label) {
         var caps = getCapabilities();
         try {
             check(caps.glGetObjectLabel).invokeExact(identifier, name, bufSize, length, label);
@@ -288,16 +560,16 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void getObjectLabel(int identifier, int name, Addressable length, MemorySegment label) {
+    public static void getObjectLabel(int identifier, int name, MemorySegment length, MemorySegment label) {
         getObjectLabel(identifier, name, (int) label.byteSize(), length, label);
     }
 
     public static String getObjectLabel(SegmentAllocator allocator, int identifier, int name, int bufSize, int @Nullable [] length) {
         var seg = allocator.allocateArray(JAVA_BYTE, bufSize);
-        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemoryAddress.NULL;
+        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemorySegment.NULL;
         getObjectLabel(identifier, name, bufSize, seg, pLen);
         if (length != null && length.length > 0) {
-            length[0] = ((MemorySegment) pLen).get(JAVA_INT, 0);
+            length[0] = pLen.get(JAVA_INT, 0);
         }
         return seg.getUtf8String(0);
     }
@@ -306,7 +578,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         return getObjectLabel(allocator, identifier, name, 1024, length);
     }
 
-    public static void getObjectPtrLabel(MemoryAddress ptr, int bufSize, Addressable length, Addressable label) {
+    public static void getObjectPtrLabel(MemorySegment ptr, int bufSize, MemorySegment length, MemorySegment label) {
         var caps = getCapabilities();
         try {
             check(caps.glGetObjectPtrLabel).invokeExact(ptr, bufSize, length, label);
@@ -315,25 +587,25 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void getObjectPtrLabel(MemoryAddress ptr, Addressable length, MemorySegment label) {
+    public static void getObjectPtrLabel(MemorySegment ptr, MemorySegment length, MemorySegment label) {
         getObjectPtrLabel(ptr, (int) label.byteSize(), length, label);
     }
 
-    public static String getObjectPtrLabel(SegmentAllocator allocator, MemoryAddress ptr, int bufSize, int @Nullable [] length) {
+    public static String getObjectPtrLabel(SegmentAllocator allocator, MemorySegment ptr, int bufSize, int @Nullable [] length) {
         var seg = allocator.allocateArray(JAVA_BYTE, bufSize);
-        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemoryAddress.NULL;
+        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemorySegment.NULL;
         getObjectPtrLabel(ptr, bufSize, seg, pLen);
         if (length != null && length.length > 0) {
-            length[0] = ((MemorySegment) pLen).get(JAVA_INT, 0);
+            length[0] = pLen.get(JAVA_INT, 0);
         }
         return seg.getUtf8String(0);
     }
 
-    public static String getObjectPtrLabel(SegmentAllocator allocator, MemoryAddress ptr, int @Nullable [] length) {
+    public static String getObjectPtrLabel(SegmentAllocator allocator, MemorySegment ptr, int @Nullable [] length) {
         return getObjectPtrLabel(allocator, ptr, 1024, length);
     }
 
-    public static void getProgramInterfaceiv(int program, int programInterface, int pname, Addressable params) {
+    public static void getProgramInterfaceiv(int program, int programInterface, int pname, MemorySegment params) {
         var caps = getCapabilities();
         try {
             check(caps.glGetProgramInterfaceiv).invokeExact(program, programInterface, pname, params);
@@ -354,7 +626,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static int getProgramResourceIndex(int program, int programInterface, Addressable name) {
+    public static int getProgramResourceIndex(int program, int programInterface, MemorySegment name) {
         var caps = getCapabilities();
         try {
             return (int) check(caps.glGetProgramResourceIndex).invokeExact(program, programInterface, name);
@@ -367,7 +639,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         return getProgramResourceIndex(program, programInterface, allocator.allocateUtf8String(name));
     }
 
-    public static int getProgramResourceLocation(int program, int programInterface, Addressable name) {
+    public static int getProgramResourceLocation(int program, int programInterface, MemorySegment name) {
         var caps = getCapabilities();
         try {
             return (int) check(caps.glGetProgramResourceLocation).invokeExact(program, programInterface, name);
@@ -380,7 +652,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         return getProgramResourceLocation(program, programInterface, allocator.allocateUtf8String(name));
     }
 
-    public static int getProgramResourceLocationIndex(int program, int programInterface, Addressable name) {
+    public static int getProgramResourceLocationIndex(int program, int programInterface, MemorySegment name) {
         var caps = getCapabilities();
         try {
             return (int) check(caps.glGetProgramResourceLocationIndex).invokeExact(program, programInterface, name);
@@ -393,7 +665,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         return getProgramResourceLocationIndex(program, programInterface, allocator.allocateUtf8String(name));
     }
 
-    public static void getProgramResourceName(int program, int programInterface, int index, int bufSize, Addressable length, Addressable name) {
+    public static void getProgramResourceName(int program, int programInterface, int index, int bufSize, MemorySegment length, MemorySegment name) {
         var caps = getCapabilities();
         try {
             check(caps.glGetProgramResourceName).invokeExact(program, programInterface, index, bufSize, length, name);
@@ -402,16 +674,16 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void getProgramResourceName(int program, int programInterface, int index, Addressable length, MemorySegment name) {
+    public static void getProgramResourceName(int program, int programInterface, int index, MemorySegment length, MemorySegment name) {
         getProgramResourceName(program, programInterface, index, (int) name.byteSize(), length, name);
     }
 
     public static String getProgramResourceName(SegmentAllocator allocator, int program, int programInterface, int index, int bufSize, int @Nullable [] length) {
         var seg = allocator.allocateArray(JAVA_BYTE, bufSize);
-        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemoryAddress.NULL;
+        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemorySegment.NULL;
         getProgramResourceName(program, programInterface, index, bufSize, pLen, seg);
         if (length != null && length.length > 0) {
-            length[0] = ((MemorySegment) pLen).get(JAVA_INT, 0);
+            length[0] = pLen.get(JAVA_INT, 0);
         }
         return seg.getUtf8String(0);
     }
@@ -420,7 +692,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         return getProgramResourceName(allocator, program, programInterface, index, 1024, length);
     }
 
-    public static void getProgramResourceiv(int program, int programInterface, int index, int propCount, Addressable props, int count, Addressable length, Addressable params) {
+    public static void getProgramResourceiv(int program, int programInterface, int index, int propCount, MemorySegment props, int count, MemorySegment length, MemorySegment params) {
         var caps = getCapabilities();
         try {
             check(caps.glGetProgramResourceiv).invokeExact(program, programInterface, index, propCount, props, count, length, params);
@@ -429,23 +701,23 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void getProgramResourceiv(int program, int programInterface, int index, MemorySegment props, Addressable length, MemorySegment params) {
+    public static void getProgramResourceiv(int program, int programInterface, int index, MemorySegment props, MemorySegment length, MemorySegment params) {
         getProgramResourceiv(program, programInterface, index, (int) (props.byteSize() >> 2), props, (int) params.byteSize(), length, params);
     }
 
     public static void getProgramResourceiv(SegmentAllocator allocator, int program, int programInterface, int index, int[] props, int @Nullable [] length, int[] params) {
         var seg = allocator.allocateArray(JAVA_INT, params.length);
-        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemoryAddress.NULL;
+        var pLen = length != null ? allocator.allocate(JAVA_INT) : MemorySegment.NULL;
         getProgramResourceiv(program, programInterface, index, props.length, allocator.allocateArray(JAVA_INT, props), params.length, pLen, seg);
         if (length != null && length.length > 0) {
-            length[0] = ((MemorySegment) pLen).get(JAVA_INT, 0);
+            length[0] = pLen.get(JAVA_INT, 0);
         }
         RuntimeHelper.toArray(seg, params);
     }
 
     public static int getProgramResourceiv(SegmentAllocator allocator, int program, int programInterface, int index, int[] props) {
         var seg = allocator.allocate(JAVA_INT);
-        getProgramResourceiv(program, programInterface, index, props.length, allocator.allocateArray(JAVA_INT, props), 1, MemoryAddress.NULL, seg);
+        getProgramResourceiv(program, programInterface, index, props.length, allocator.allocateArray(JAVA_INT, props), 1, MemorySegment.NULL, seg);
         return seg.get(JAVA_INT, 0);
     }
 
@@ -467,7 +739,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void invalidateFramebuffer(int target, int numAttachments, Addressable attachments) {
+    public static void invalidateFramebuffer(int target, int numAttachments, MemorySegment attachments) {
         var caps = getCapabilities();
         try {
             check(caps.glInvalidateFramebuffer).invokeExact(target, numAttachments, attachments);
@@ -484,15 +756,13 @@ public sealed class GL43C extends GL42C permits GL44C {
         var stack = MemoryStack.stackGet();
         long stackPointer = stack.getPointer();
         try {
-            var mem = stack.malloc(JAVA_INT);
-            mem.set(JAVA_INT, 0, attachment);
-            invalidateFramebuffer(target, 1, mem);
+            invalidateFramebuffer(target, 1, stack.ints(attachment));
         } finally {
             stack.setPointer(stackPointer);
         }
     }
 
-    public static void invalidateSubFramebuffer(int target, int numAttachments, Addressable attachments, int x, int y, int width, int height) {
+    public static void invalidateSubFramebuffer(int target, int numAttachments, MemorySegment attachments, int x, int y, int width, int height) {
         var caps = getCapabilities();
         try {
             check(caps.glInvalidateSubFramebuffer).invokeExact(target, numAttachments, attachments, x, y, width, height);
@@ -509,9 +779,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         var stack = MemoryStack.stackGet();
         long stackPointer = stack.getPointer();
         try {
-            var mem = stack.malloc(JAVA_INT);
-            mem.set(JAVA_INT, 0, attachment);
-            invalidateSubFramebuffer(target, 1, mem, x, y, width, height);
+            invalidateSubFramebuffer(target, 1, stack.ints(attachment), x, y, width, height);
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -535,7 +803,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void multiDrawArraysIndirect(int mode, Addressable indirect, int drawCount, int stride) {
+    public static void multiDrawArraysIndirect(int mode, MemorySegment indirect, int drawCount, int stride) {
         var caps = getCapabilities();
         try {
             check(caps.glMultiDrawArraysIndirect).invokeExact(mode, indirect, drawCount, stride);
@@ -545,10 +813,10 @@ public sealed class GL43C extends GL42C permits GL44C {
     }
 
     public static void multiDrawArraysIndirect(int mode, DrawArraysIndirectCommand.Buffer indirect, int drawCount, int stride) {
-        multiDrawArraysIndirect(mode, indirect.rawAddress(), drawCount, stride);
+        multiDrawArraysIndirect(mode, indirect.address(), drawCount, stride);
     }
 
-    public static void multiDrawElementsIndirect(int mode, int type, Addressable indirect, int drawCount, int stride) {
+    public static void multiDrawElementsIndirect(int mode, int type, MemorySegment indirect, int drawCount, int stride) {
         var caps = getCapabilities();
         try {
             check(caps.glMultiDrawElementsIndirect).invokeExact(mode, type, indirect, drawCount, stride);
@@ -558,10 +826,10 @@ public sealed class GL43C extends GL42C permits GL44C {
     }
 
     public static void multiDrawElementsIndirect(int mode, int type, DrawElementsIndirectCommand.Buffer indirect, int drawCount, int stride) {
-        multiDrawElementsIndirect(mode, type, indirect.rawAddress(), drawCount, stride);
+        multiDrawElementsIndirect(mode, type, indirect.address(), drawCount, stride);
     }
 
-    public static void objectLabel(int identifier, int name, int length, Addressable label) {
+    public static void objectLabel(int identifier, int name, int length, MemorySegment label) {
         var caps = getCapabilities();
         try {
             check(caps.glObjectLabel).invokeExact(identifier, name, length, label);
@@ -574,7 +842,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         objectLabel(identifier, name, -1, allocator.allocateUtf8String(label));
     }
 
-    public static void objectPtrLabel(MemoryAddress ptr, int length, Addressable label) {
+    public static void objectPtrLabel(MemorySegment ptr, int length, MemorySegment label) {
         var caps = getCapabilities();
         try {
             check(caps.glObjectPtrLabel).invokeExact(ptr, length, label);
@@ -583,7 +851,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void objectPtrLabel(SegmentAllocator allocator, MemoryAddress ptr, String label) {
+    public static void objectPtrLabel(SegmentAllocator allocator, MemorySegment ptr, String label) {
         objectPtrLabel(ptr, -1, allocator.allocateUtf8String(label));
     }
 
@@ -596,7 +864,7 @@ public sealed class GL43C extends GL42C permits GL44C {
         }
     }
 
-    public static void pushDebugGroup(int source, int id, int length, Addressable message) {
+    public static void pushDebugGroup(int source, int id, int length, MemorySegment message) {
         var caps = getCapabilities();
         try {
             check(caps.glPushDebugGroup).invokeExact(source, id, length, message);
