@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,14 +12,6 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.gl;
@@ -29,9 +21,8 @@ import org.overrun.glib.FunctionDescriptors;
 import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.util.value.Value2;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 import java.lang.invoke.MethodHandle;
 import java.util.function.BiFunction;
@@ -41,33 +32,33 @@ import java.util.function.BiFunction;
  *
  * <h2>Example</h2>
  * <pre>{@code
- * if (GLLoader.loadShared(GLFW::getProcAddress) == 0)
+ * if (GLLoader.loadConfined(true, GLFW::getProcAddress) == 0)
  *     throw new IllegalStateException("Failed to load OpenGL");
  * }</pre>
  *
  * @author squid233
  * @since 0.1.0
  */
-public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryAddress> {
+public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemorySegment> {
     /**
-     * Creates a load function with shared arena.
+     * Creates a load function with the shared arena.
      *
      * @param function the function pointer getter
      * @return the load function and the arena
      */
-    static Value2<GLLoadFunc, MemorySession> ofShared(Getter function) {
-        final var arena = MemorySession.openShared();
+    static Value2<GLLoadFunc, Arena> ofShared(Getter function) {
+        final var arena = Arena.openShared();
         return new Value2<>(of(arena, function), arena);
     }
 
     /**
-     * Creates a load function with confined arena.
+     * Creates a load function with the confined arena.
      *
      * @param function the function pointer getter
      * @return the load function and the arena
      */
-    static Value2<GLLoadFunc, MemorySession> ofConfined(Getter function) {
-        final var arena = MemorySession.openConfined();
+    static Value2<GLLoadFunc, Arena> ofConfined(Getter function) {
+        final var arena = Arena.openConfined();
         return new Value2<>(of(arena, function), arena);
     }
 
@@ -83,7 +74,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
     }
 
     @Override
-    default MemoryAddress apply(SegmentAllocator allocator, String s) {
+    default MemorySegment apply(SegmentAllocator allocator, String s) {
         return invoke(allocator, s);
     }
 
@@ -94,7 +85,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
      * @param procName  the function name
      * @return the function address
      */
-    MemoryAddress invoke(SegmentAllocator allocator, String procName);
+    MemorySegment invoke(SegmentAllocator allocator, String procName);
 
     /**
      * Load a function by the given name and creates a downcall handle or {@code null}.
@@ -113,7 +104,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
      * @since 0.1.0
      */
     @FunctionalInterface
-    interface Getter extends BiFunction<SegmentAllocator, String, MemoryAddress> {
+    interface Getter extends BiFunction<SegmentAllocator, String, MemorySegment> {
     }
 
     /**
@@ -139,7 +130,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
         }
 
         @Override
-        public MemoryAddress invoke(SegmentAllocator allocator, String procName) {
+        public MemorySegment invoke(SegmentAllocator allocator, String procName) {
             return func.apply(allocator, procName);
         }
 
