@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,14 +12,6 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.gl;
@@ -28,15 +20,15 @@ import org.jetbrains.annotations.Nullable;
 import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.gl.ext.amd.GLAMDDebugOutput;
 import org.overrun.glib.gl.ext.amd.GLDebugProcAMD;
-import org.overrun.glib.gl.ext.arb.GLARBDebugOutput;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.util.Locale;
 import java.util.function.Consumer;
 
 import static org.overrun.glib.RuntimeHelper.*;
 import static org.overrun.glib.gl.GLConstC.*;
+import static org.overrun.glib.gl.ext.arb.GLARBDebugOutput.*;
 
 /**
  * OpenGL utilities.
@@ -52,14 +44,14 @@ public final class GLUtil {
      * Detects the best debug output functionality to use and creates a callback that prints information to
      * {@link RuntimeHelper#apiLogger() API Logger}.
      * <p>
-     * The callback function is returned as a {@link MemorySession Arena},
-     * that should reset to NULL and be {@link MemorySession#close() freed} when no longer needed, which is often after
+     * The callback function is returned as a {@link Arena},
+     * that should reset to NULL and be {@link Arena#close() freed} when no longer needed, which is often after
      * destroy GL context.
      *
      * @return the arena.
      */
     @Nullable
-    public static MemorySession setupDebugMessageCallback() {
+    public static Arena setupDebugMessageCallback() {
         return setupDebugMessageCallback(apiLogger());
     }
 
@@ -67,14 +59,14 @@ public final class GLUtil {
      * Detects the best debug output functionality to use and creates a callback that prints information to the specified
      * logger.
      * <p>
-     * The callback function is returned as a {@link MemorySession Arena}, that should reset to NULL and be
-     * {@link MemorySession#close() freed} when no longer needed, which is often after destroy GL context.
+     * The callback function is returned as a {@link Arena}, that should reset to NULL and be
+     * {@link Arena#close() freed} when no longer needed, which is often after destroy GL context.
      *
      * @param logger the output logger.
      * @return the arena.
      */
     @Nullable
-    public static MemorySession setupDebugMessageCallback(Consumer<String> logger) {
+    public static Arena setupDebugMessageCallback(Consumer<String> logger) {
         var caps = GLLoader.getCapabilities();
 
         if (caps.Ver43 || caps.ext.GL_KHR_debug) {
@@ -83,7 +75,7 @@ public final class GLUtil {
             } else {
                 apiLog("[GL] Using KHR_debug for error logging.");
             }
-            var arena = MemorySession.openConfined();
+            var arena = Arena.openConfined();
             GLDebugProc proc = (source, type, id, severity, message, userParam) -> {
                 var sb = new StringBuilder(512);
                 sb.append("[OverrunGL] OpenGL debug message\n");
@@ -100,19 +92,19 @@ public final class GLUtil {
                 }
                 logger.accept(sb.toString());
             };
-            GL.debugMessageCallback(arena, proc, MemoryAddress.NULL);
-            // no need GLKHRDebug
+            GL.debugMessageCallback(arena, proc, MemorySegment.NULL);
+            // no need GL_KHR_debug
             if ((caps.Ver43 || caps.Ver30) &&
-                (GL.getInteger(GL_CONTEXT_FLAGS) & GL_CONTEXT_FLAG_DEBUG_BIT) == 0) {
+                (GL.getInteger(GL.CONTEXT_FLAGS) & GL.CONTEXT_FLAG_DEBUG_BIT) == 0) {
                 apiLog("[GL] Warning: A non-debug context may not produce any debug output.");
-                GL.enable(GL_DEBUG_OUTPUT);
+                GL.enable(GL.DEBUG_OUTPUT);
             }
             return arena;
         }
 
         if (caps.ext.GL_ARB_debug_output) {
             apiLog("[GL] Using ARB_debug_output for error logging.");
-            var arena = MemorySession.openConfined();
+            var arena = Arena.openConfined();
             GLDebugProc proc = (source, type, id, severity, message, userParam) -> {
                 var sb = new StringBuilder(512);
                 sb.append("[OverrunGL] ARB_debug_output message\n");
@@ -129,13 +121,13 @@ public final class GLUtil {
                 }
                 logger.accept(sb.toString());
             };
-            GLARBDebugOutput.glDebugMessageCallbackARB(arena, proc, MemoryAddress.NULL);
+            glDebugMessageCallbackARB(arena, proc, MemorySegment.NULL);
             return arena;
         }
 
         if (caps.ext.GL_AMD_debug_output) {
             apiLog("[GL] Using AMD_debug_output for error logging.");
-            var arena = MemorySession.openConfined();
+            var arena = Arena.openConfined();
             GLDebugProcAMD proc = (id, category, severity, message, userParam) -> {
                 var sb = new StringBuilder(512);
                 sb.append("[OverrunGL] AMD_debug_output message\n");
@@ -151,7 +143,7 @@ public final class GLUtil {
                 }
                 logger.accept(sb.toString());
             };
-            GLAMDDebugOutput.glDebugMessageCallbackAMD(arena, proc, MemoryAddress.NULL);
+            GLAMDDebugOutput.glDebugMessageCallbackAMD(arena, proc, MemorySegment.NULL);
             return arena;
         }
 
@@ -169,35 +161,35 @@ public final class GLUtil {
 
     private static String getDebugSource(int source) {
         return switch (source) {
-            case GL_DEBUG_SOURCE_API -> "API";
-            case GL_DEBUG_SOURCE_WINDOW_SYSTEM -> "WINDOW SYSTEM";
-            case GL_DEBUG_SOURCE_SHADER_COMPILER -> "SHADER COMPILER";
-            case GL_DEBUG_SOURCE_THIRD_PARTY -> "THIRD PARTY";
-            case GL_DEBUG_SOURCE_APPLICATION -> "APPLICATION";
-            case GL_DEBUG_SOURCE_OTHER -> "OTHER";
+            case GL.DEBUG_SOURCE_API -> "API";
+            case GL.DEBUG_SOURCE_WINDOW_SYSTEM -> "WINDOW SYSTEM";
+            case GL.DEBUG_SOURCE_SHADER_COMPILER -> "SHADER COMPILER";
+            case GL.DEBUG_SOURCE_THIRD_PARTY -> "THIRD PARTY";
+            case GL.DEBUG_SOURCE_APPLICATION -> "APPLICATION";
+            case GL.DEBUG_SOURCE_OTHER -> "OTHER";
             default -> unknownToken(source);
         };
     }
 
     private static String getDebugType(int type) {
         return switch (type) {
-            case GL_DEBUG_TYPE_ERROR -> "ERROR";
-            case GL_DEBUG_TYPE_DEPRECATED_BEHAVIOR -> "DEPRECATED BEHAVIOR";
-            case GL_DEBUG_TYPE_UNDEFINED_BEHAVIOR -> "UNDEFINED BEHAVIOR";
-            case GL_DEBUG_TYPE_PORTABILITY -> "PORTABILITY";
-            case GL_DEBUG_TYPE_PERFORMANCE -> "PERFORMANCE";
-            case GL_DEBUG_TYPE_OTHER -> "OTHER";
-            case GL_DEBUG_TYPE_MARKER -> "MARKER";
+            case GL.DEBUG_TYPE_ERROR -> "ERROR";
+            case GL.DEBUG_TYPE_DEPRECATED_BEHAVIOR -> "DEPRECATED BEHAVIOR";
+            case GL.DEBUG_TYPE_UNDEFINED_BEHAVIOR -> "UNDEFINED BEHAVIOR";
+            case GL.DEBUG_TYPE_PORTABILITY -> "PORTABILITY";
+            case GL.DEBUG_TYPE_PERFORMANCE -> "PERFORMANCE";
+            case GL.DEBUG_TYPE_OTHER -> "OTHER";
+            case GL.DEBUG_TYPE_MARKER -> "MARKER";
             default -> unknownToken(type);
         };
     }
 
     private static String getDebugSeverity(int severity) {
         return switch (severity) {
-            case GL_DEBUG_SEVERITY_HIGH -> "HIGH";
-            case GL_DEBUG_SEVERITY_MEDIUM -> "MEDIUM";
-            case GL_DEBUG_SEVERITY_LOW -> "LOW";
-            case GL_DEBUG_SEVERITY_NOTIFICATION -> "NOTIFICATION";
+            case GL.DEBUG_SEVERITY_HIGH -> "HIGH";
+            case GL.DEBUG_SEVERITY_MEDIUM -> "MEDIUM";
+            case GL.DEBUG_SEVERITY_LOW -> "LOW";
+            case GL.DEBUG_SEVERITY_NOTIFICATION -> "NOTIFICATION";
             default -> unknownToken(severity);
         };
     }
