@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,14 +12,6 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.gl.ext.arb;
@@ -29,9 +21,8 @@ import org.overrun.glib.gl.GLDebugProc;
 import org.overrun.glib.gl.GLExtCaps;
 import org.overrun.glib.gl.GLLoadFunc;
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 
 import static java.lang.foreign.ValueLayout.JAVA_BYTE;
@@ -47,6 +38,29 @@ import static org.overrun.glib.gl.GLLoader.getExtCapabilities;
  * @since 0.1.0
  */
 public final class GLARBDebugOutput {
+    public static final int GL_DEBUG_OUTPUT_SYNCHRONOUS_ARB = 0x8242;
+    public static final int GL_DEBUG_NEXT_LOGGED_MESSAGE_LENGTH_ARB = 0x8243;
+    public static final int GL_DEBUG_CALLBACK_FUNCTION_ARB = 0x8244;
+    public static final int GL_DEBUG_CALLBACK_USER_PARAM_ARB = 0x8245;
+    public static final int GL_DEBUG_SOURCE_API_ARB = 0x8246;
+    public static final int GL_DEBUG_SOURCE_WINDOW_SYSTEM_ARB = 0x8247;
+    public static final int GL_DEBUG_SOURCE_SHADER_COMPILER_ARB = 0x8248;
+    public static final int GL_DEBUG_SOURCE_THIRD_PARTY_ARB = 0x8249;
+    public static final int GL_DEBUG_SOURCE_APPLICATION_ARB = 0x824A;
+    public static final int GL_DEBUG_SOURCE_OTHER_ARB = 0x824B;
+    public static final int GL_DEBUG_TYPE_ERROR_ARB = 0x824C;
+    public static final int GL_DEBUG_TYPE_DEPRECATED_BEHAVIOR_ARB = 0x824D;
+    public static final int GL_DEBUG_TYPE_UNDEFINED_BEHAVIOR_ARB = 0x824E;
+    public static final int GL_DEBUG_TYPE_PORTABILITY_ARB = 0x824F;
+    public static final int GL_DEBUG_TYPE_PERFORMANCE_ARB = 0x8250;
+    public static final int GL_DEBUG_TYPE_OTHER_ARB = 0x8251;
+    public static final int GL_MAX_DEBUG_MESSAGE_LENGTH_ARB = 0x9143;
+    public static final int GL_MAX_DEBUG_LOGGED_MESSAGES_ARB = 0x9144;
+    public static final int GL_DEBUG_LOGGED_MESSAGES_ARB = 0x9145;
+    public static final int GL_DEBUG_SEVERITY_HIGH_ARB = 0x9146;
+    public static final int GL_DEBUG_SEVERITY_MEDIUM_ARB = 0x9147;
+    public static final int GL_DEBUG_SEVERITY_LOW_ARB = 0x9148;
+
     public static void load(GLExtCaps ext, GLLoadFunc load) {
         if (!ext.GL_ARB_debug_output) return;
         ext.glDebugMessageCallbackARB = load.invoke("glDebugMessageCallbackARB", PPV);
@@ -55,7 +69,7 @@ public final class GLARBDebugOutput {
         ext.glGetDebugMessageLogARB = load.invoke("glGetDebugMessageLogARB", IIPPPPPPI);
     }
 
-    public static void glDebugMessageCallbackARB(Addressable callback, Addressable userParam) {
+    public static void glDebugMessageCallbackARB(MemorySegment callback, MemorySegment userParam) {
         var ext = getExtCapabilities();
         try {
             check(ext.glDebugMessageCallbackARB).invokeExact(callback, userParam);
@@ -64,11 +78,11 @@ public final class GLARBDebugOutput {
         }
     }
 
-    public static void glDebugMessageCallbackARB(MemorySession scope, GLDebugProc callback, Addressable userParam) {
-        glDebugMessageCallbackARB(callback.address(scope), userParam);
+    public static void glDebugMessageCallbackARB(Arena arena, GLDebugProc callback, MemorySegment userParam) {
+        glDebugMessageCallbackARB(callback.address(arena), userParam);
     }
 
-    public static void glDebugMessageControlARB(int source, int type, int severity, int count, Addressable ids, boolean enabled) {
+    public static void glDebugMessageControlARB(int source, int type, int severity, int count, MemorySegment ids, boolean enabled) {
         var ext = getExtCapabilities();
         try {
             check(ext.glDebugMessageControlARB).invokeExact(source, type, severity, count, ids, enabled);
@@ -81,7 +95,7 @@ public final class GLARBDebugOutput {
         glDebugMessageControlARB(source, type, severity, count, allocator.allocateArray(JAVA_INT, ids), enabled);
     }
 
-    public static void glDebugMessageInsertARB(int source, int type, int id, int severity, int length, Addressable buf) {
+    public static void glDebugMessageInsertARB(int source, int type, int id, int severity, int length, MemorySegment buf) {
         var ext = getExtCapabilities();
         try {
             check(ext.glDebugMessageInsertARB).invokeExact(source, type, id, severity, length, buf);
@@ -94,7 +108,7 @@ public final class GLARBDebugOutput {
         glDebugMessageInsertARB(source, type, id, severity, -1, allocator.allocateUtf8String(buf));
     }
 
-    public static int glGetDebugMessageLogARB(int count, int bufSize, Addressable sources, Addressable types, Addressable ids, Addressable severities, Addressable lengths, Addressable messageLog) {
+    public static int glGetDebugMessageLogARB(int count, int bufSize, MemorySegment sources, MemorySegment types, MemorySegment ids, MemorySegment severities, MemorySegment lengths, MemorySegment messageLog) {
         var ext = getExtCapabilities();
         try {
             return (int) check(ext.glGetDebugMessageLogARB).invokeExact(count, bufSize, sources, types, ids, severities, lengths, messageLog);
