@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,18 +12,11 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.demo.glfw;
 
+import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.demo.util.IOUtil;
 import org.overrun.glib.gl.GL;
 import org.overrun.glib.gl.GLLoader;
@@ -34,12 +27,10 @@ import org.overrun.glib.glfw.GLFWImage;
 import org.overrun.glib.stb.STBImage;
 
 import java.io.IOException;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
 import static java.lang.foreign.ValueLayout.JAVA_INT;
-import static org.overrun.glib.gl.GLConstC.GL_COLOR_BUFFER_BIT;
-import static org.overrun.glib.gl.GLConstC.GL_DEPTH_BUFFER_BIT;
 
 /**
  * Tests GLFW window icon and STB image
@@ -48,10 +39,10 @@ import static org.overrun.glib.gl.GLConstC.GL_DEPTH_BUFFER_BIT;
  * @since 0.1.0
  */
 public final class GLFWWindowIconTest {
-    private MemoryAddress window;
+    private MemorySegment window;
 
     public void run() {
-        try (var arena = MemorySession.openShared()) {
+        try (var arena = Arena.openShared()) {
             init(arena);
             load();
         }
@@ -64,7 +55,7 @@ public final class GLFWWindowIconTest {
         GLFW.setErrorCallback(null);
     }
 
-    private void init(MemorySession arena) {
+    private void init(Arena arena) {
         GLFWErrorCallback.createPrint().set();
         if (!GLFW.init()) {
             throw new IllegalStateException("Unable to initialize GLFW");
@@ -72,8 +63,8 @@ public final class GLFWWindowIconTest {
         GLFW.defaultWindowHints();
         GLFW.windowHint(GLFW.VISIBLE, false);
         GLFW.windowHint(GLFW.RESIZABLE, true);
-        window = GLFW.createWindow(arena, 300, 300, "Hello World!", MemoryAddress.NULL, MemoryAddress.NULL);
-        if (window == MemoryAddress.NULL)
+        window = GLFW.createWindow(arena, 300, 300, "Hello World!", MemorySegment.NULL, MemorySegment.NULL);
+        if (window.address() == RuntimeHelper.NULL)
             throw new RuntimeException("Failed to create the GLFW window");
 
         try {
@@ -125,7 +116,7 @@ public final class GLFWWindowIconTest {
 
     private void loop() {
         while (!GLFW.windowShouldClose(window)) {
-            GL.clear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+            GL.clear(GL.COLOR_BUFFER_BIT | GL.DEPTH_BUFFER_BIT);
 
             GLFW.swapBuffers(window);
 
