@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,18 +12,11 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.demo.opengl;
 
+import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.demo.util.IOUtil;
 import org.overrun.glib.gl.GL;
 import org.overrun.glib.gl.GL11;
@@ -34,11 +27,10 @@ import org.overrun.glib.glfw.GLFWErrorCallback;
 import org.overrun.glib.stb.STBImage;
 
 import java.io.IOException;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
 import static java.lang.foreign.ValueLayout.JAVA_INT;
-import static org.overrun.glib.gl.GLConst.*;
 
 /**
  * Tests OpenGL 1.5 buffers
@@ -47,11 +39,11 @@ import static org.overrun.glib.gl.GLConst.*;
  * @since 0.1.0
  */
 public final class GL15Test {
-    private MemoryAddress window;
+    private MemorySegment window;
     private int vbo, tex;
 
     public void run() {
-        try (var arena = MemorySession.openShared()) {
+        try (var arena = Arena.openShared()) {
             init(arena);
             load(arena);
         }
@@ -67,7 +59,7 @@ public final class GL15Test {
         GLFW.setErrorCallback(null);
     }
 
-    private void init(MemorySession arena) {
+    private void init(Arena arena) {
         GLFWErrorCallback.createPrint().set();
         if (!GLFW.init()) {
             throw new IllegalStateException("Unable to initialize GLFW");
@@ -75,8 +67,8 @@ public final class GL15Test {
         GLFW.defaultWindowHints();
         GLFW.windowHint(GLFW.VISIBLE, false);
         GLFW.windowHint(GLFW.RESIZABLE, true);
-        window = GLFW.createWindow(arena, 640, 480, "OpenGL 1.5", MemoryAddress.NULL, MemoryAddress.NULL);
-        if (window == MemoryAddress.NULL)
+        window = GLFW.createWindow(arena, 640, 480, "OpenGL 1.5", MemorySegment.NULL, MemorySegment.NULL);
+        if (window.address() == RuntimeHelper.NULL)
             throw new RuntimeException("Failed to create the GLFW window");
         GLFW.setKeyCallback(window, (handle, key, scancode, action, mods) -> {
             if (key == GLFW.KEY_ESCAPE && action == GLFW.RELEASE) {
@@ -101,72 +93,72 @@ public final class GL15Test {
         GLFW.showWindow(window);
     }
 
-    private void load(MemorySession arena) {
+    private void load(Arena arena) {
         if (GLLoader.loadConfined(GLFW::getProcAddress) == null)
             throw new IllegalStateException("Failed to load OpenGL");
 
         GL.clearColor(0.4f, 0.6f, 0.9f, 1.0f);
-        GL.enable(GL_TEXTURE_2D);
+        GL.enable(GL.TEXTURE_2D);
 
         vbo = GL.genBuffer();
-        GL.bindBuffer(GL_ARRAY_BUFFER, vbo);
-        GL.bufferData(arena, GL_ARRAY_BUFFER, new float[]{
+        GL.bindBuffer(GL.ARRAY_BUFFER, vbo);
+        GL.bufferData(arena, GL.ARRAY_BUFFER, new float[]{
             // Vertex          Color             Tex-coord
             0.0f, 0.5f, 0.0f, 1.0f, 0.0f, 0.0f, 0.0f, 0.0f,
             -0.5f, -0.5f, 0.0f, 0.0f, 1.0f, 0.0f, 0.0f, 1.0f,
             0.5f, -0.5f, 0.0f, 0.0f, 0.0f, 1.0f, 1.0f, 1.0f
-        }, GL_STATIC_DRAW);
-        GL.bindBuffer(GL_ARRAY_BUFFER, 0);
+        }, GL.STATIC_DRAW);
+        GL.bindBuffer(GL.ARRAY_BUFFER, 0);
 
         tex = GL.genTexture();
-        GL.bindTexture(GL_TEXTURE_2D, tex);
-        GL.texParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_NEAREST);
-        GL.texParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_NEAREST);
+        GL.bindTexture(GL.TEXTURE_2D, tex);
+        GL.texParameteri(GL.TEXTURE_2D, GL.TEXTURE_MAG_FILTER, GL.NEAREST);
+        GL.texParameteri(GL.TEXTURE_2D, GL.TEXTURE_MIN_FILTER, GL.NEAREST);
         try {
             var px = arena.allocate(JAVA_INT);
             var py = arena.allocate(JAVA_INT);
             var pc = arena.allocate(JAVA_INT);
             var data = STBImage.loadFromMemory(
-                IOUtil.ioResourceToSegment(arena, "image.png", 256),
+                IOUtil.ioResourceToSegment(arena, "image.png", 256, 128),
                 px, py, pc, STBImage.RGB
             );
-            GL.texImage2D(GL_TEXTURE_2D,
+            GL.texImage2D(GL.TEXTURE_2D,
                 0,
-                GL_RGB,
+                GL.RGB,
                 px.get(JAVA_INT, 0),
                 py.get(JAVA_INT, 0),
                 0,
-                GL_RGB,
-                GL_UNSIGNED_BYTE,
+                GL.RGB,
+                GL.UNSIGNED_BYTE,
                 data);
             STBImage.free(data);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        GL.bindTexture(GL_TEXTURE_2D, 0);
+        GL.bindTexture(GL.TEXTURE_2D, 0);
     }
 
     private void loop() {
         while (!GLFW.windowShouldClose(window)) {
-            GL.clear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+            GL.clear(GL.COLOR_BUFFER_BIT | GL.DEPTH_BUFFER_BIT);
 
             // Draw triangle
-            GL.bindTexture(GL_TEXTURE_2D, tex);
-            GL.bindBuffer(GL_ARRAY_BUFFER, vbo);
-            GL11.enableClientState(GL_VERTEX_ARRAY);
-            GL11.enableClientState(GL_COLOR_ARRAY);
-            GL11.enableClientState(GL_TEXTURE_COORD_ARRAY);
+            GL.bindTexture(GL.TEXTURE_2D, tex);
+            GL.bindBuffer(GL.ARRAY_BUFFER, vbo);
+            GL11.enableClientState(GL11.VERTEX_ARRAY);
+            GL11.enableClientState(GL11.COLOR_ARRAY);
+            GL11.enableClientState(GL11.TEXTURE_COORD_ARRAY);
             // 8 double words = 32 bytes
             final int stride = 8 << 2;
-            GL11.vertexPointer(3, GL_FLOAT, stride, MemoryAddress.NULL);
-            GL11.colorPointer(3, GL_FLOAT, stride, MemoryAddress.ofLong(3 << 2));
-            GL11.texCoordPointer(2, GL_FLOAT, stride, MemoryAddress.ofLong(6 << 2));
-            GL.drawArrays(GL_TRIANGLES, 0, 3);
-            GL11.disableClientState(GL_VERTEX_ARRAY);
-            GL11.disableClientState(GL_COLOR_ARRAY);
-            GL11.disableClientState(GL_TEXTURE_COORD_ARRAY);
-            GL.bindBuffer(GL_ARRAY_BUFFER, 0);
-            GL.bindTexture(GL_TEXTURE_2D, 0);
+            GL11.vertexPointer(3, GL.FLOAT, stride, MemorySegment.NULL);
+            GL11.colorPointer(3, GL.FLOAT, stride, MemorySegment.ofAddress(3 << 2));
+            GL11.texCoordPointer(2, GL.FLOAT, stride, MemorySegment.ofAddress(6 << 2));
+            GL.drawArrays(GL.TRIANGLES, 0, 3);
+            GL11.disableClientState(GL11.VERTEX_ARRAY);
+            GL11.disableClientState(GL11.COLOR_ARRAY);
+            GL11.disableClientState(GL11.TEXTURE_COORD_ARRAY);
+            GL.bindBuffer(GL.ARRAY_BUFFER, 0);
+            GL.bindTexture(GL.TEXTURE_2D, 0);
 
             GLFW.swapBuffers(window);
 
