@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,18 +12,11 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.demo.opengl;
 
+import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.demo.util.IOUtil;
 import org.overrun.glib.gl.GL;
 import org.overrun.glib.gl.GLLoader;
@@ -33,11 +26,10 @@ import org.overrun.glib.glfw.GLFWErrorCallback;
 import org.overrun.glib.stb.STBImage;
 
 import java.io.IOException;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
 import static java.lang.foreign.ValueLayout.JAVA_INT;
-import static org.overrun.glib.gl.GLConstC.*;
 
 /**
  * Tests OpenGL 3.0 vertex arrays
@@ -46,14 +38,14 @@ import static org.overrun.glib.gl.GLConstC.*;
  * @since 0.1.0
  */
 public final class GL30Test {
-    private MemoryAddress window;
+    private MemorySegment window;
     private int program;
     private int colorFactor;
     private int vao, vbo, ebo;
     private int tex;
 
     public void run() {
-        try (var arena = MemorySession.openShared()) {
+        try (var arena = Arena.openShared()) {
             init(arena);
             load(arena);
         }
@@ -72,7 +64,7 @@ public final class GL30Test {
         GLFW.setErrorCallback(null);
     }
 
-    private void init(MemorySession arena) {
+    private void init(Arena arena) {
         GLFWErrorCallback.createPrint().set();
         if (!GLFW.init()) {
             throw new IllegalStateException("Unable to initialize GLFW");
@@ -80,8 +72,8 @@ public final class GL30Test {
         GLFW.defaultWindowHints();
         GLFW.windowHint(GLFW.VISIBLE, false);
         GLFW.windowHint(GLFW.RESIZABLE, true);
-        window = GLFW.createWindow(arena, 640, 480, "OpenGL 3.0", MemoryAddress.NULL, MemoryAddress.NULL);
-        if (window == MemoryAddress.NULL)
+        window = GLFW.createWindow(arena, 640, 480, "OpenGL 3.0", MemorySegment.NULL, MemorySegment.NULL);
+        if (window.address() == RuntimeHelper.NULL)
             throw new RuntimeException("Failed to create the GLFW window");
         GLFW.setKeyCallback(window, (handle, key, scancode, action, mods) -> {
             if (key == GLFW.KEY_ESCAPE && action == GLFW.RELEASE) {
@@ -106,16 +98,16 @@ public final class GL30Test {
         GLFW.showWindow(window);
     }
 
-    private void load(MemorySession arena) {
+    private void load(Arena arena) {
         if (GLLoader.loadConfined(true, GLFW::getProcAddress) == null)
             throw new IllegalStateException("Failed to load OpenGL");
 
         GL.clearColor(0.4f, 0.6f, 0.9f, 1.0f);
 
         tex = GL.genTexture();
-        GL.bindTexture(GL_TEXTURE_2D, tex);
-        GL.texParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_NEAREST);
-        GL.texParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_NEAREST);
+        GL.bindTexture(GL.TEXTURE_2D, tex);
+        GL.texParameteri(GL.TEXTURE_2D, GL.TEXTURE_MAG_FILTER, GL.NEAREST);
+        GL.texParameteri(GL.TEXTURE_2D, GL.TEXTURE_MIN_FILTER, GL.NEAREST);
         try {
             var px = arena.allocate(JAVA_INT);
             var py = arena.allocate(JAVA_INT);
@@ -124,23 +116,23 @@ public final class GL30Test {
                 IOUtil.ioResourceToSegment(arena, "image.png", 256),
                 px, py, pc, STBImage.RGB
             );
-            GL.texImage2D(GL_TEXTURE_2D,
+            GL.texImage2D(GL.TEXTURE_2D,
                 0,
-                GL_RGB,
+                GL.RGB,
                 px.get(JAVA_INT, 0),
                 py.get(JAVA_INT, 0),
                 0,
-                GL_RGB,
-                GL_UNSIGNED_BYTE,
+                GL.RGB,
+                GL.UNSIGNED_BYTE,
                 data);
             STBImage.free(data);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        GL.bindTexture(GL_TEXTURE_2D, 0);
+        GL.bindTexture(GL.TEXTURE_2D, 0);
         program = GL.createProgram();
-        int vsh = GL.createShader(GL_VERTEX_SHADER);
-        int fsh = GL.createShader(GL_FRAGMENT_SHADER);
+        int vsh = GL.createShader(GL.VERTEX_SHADER);
+        int fsh = GL.createShader(GL.FRAGMENT_SHADER);
         GL.shaderSource(arena, vsh, """
             #version 130
 
@@ -186,24 +178,24 @@ public final class GL30Test {
         vao = GL.genVertexArray();
         GL.bindVertexArray(vao);
         vbo = GL.genBuffer();
-        GL.bindBuffer(GL_ARRAY_BUFFER, vbo);
-        GL.bufferData(arena, GL_ARRAY_BUFFER, new float[]{
+        GL.bindBuffer(GL.ARRAY_BUFFER, vbo);
+        GL.bufferData(arena, GL.ARRAY_BUFFER, new float[]{
             // Vertex          UV
             -0.5f, 0.5f, 0.0f, 0.0f, 0.0f,
             -0.5f, -0.5f, 0.0f, 0.0f, 1.0f,
             0.5f, -0.5f, 0.0f, 1.0f, 1.0f,
             0.5f, 0.5f, 0.0f, 1.0f, 0.0f
-        }, GL_STATIC_DRAW);
+        }, GL.STATIC_DRAW);
         ebo = GL.genBuffer();
-        GL.bindBuffer(GL_ELEMENT_ARRAY_BUFFER, ebo);
-        GL.bufferData(arena, GL_ELEMENT_ARRAY_BUFFER, new byte[]{
+        GL.bindBuffer(GL.ELEMENT_ARRAY_BUFFER, ebo);
+        GL.bufferData(arena, GL.ELEMENT_ARRAY_BUFFER, new byte[]{
             0, 1, 2, 0, 2, 3
-        }, GL_STATIC_DRAW);
+        }, GL.STATIC_DRAW);
         GL.enableVertexAttribArray(0);
         GL.enableVertexAttribArray(1);
-        GL.vertexAttribPointer(0, 3, GL_FLOAT, false, 20, MemoryAddress.NULL);
-        GL.vertexAttribPointer(1, 2, GL_FLOAT, false, 20, MemoryAddress.ofLong(12));
-        GL.bindBuffer(GL_ARRAY_BUFFER, 0);
+        GL.vertexAttribPointer(0, 3, GL.FLOAT, false, 20, MemorySegment.NULL);
+        GL.vertexAttribPointer(1, 2, GL.FLOAT, false, 20, MemorySegment.ofAddress(12));
+        GL.bindBuffer(GL.ARRAY_BUFFER, 0);
         GL.bindVertexArray(0);
 
         colorFactor = GL.getUniformLocation(arena, program, "colorFactor");
@@ -211,17 +203,17 @@ public final class GL30Test {
 
     private void loop() {
         while (!GLFW.windowShouldClose(window)) {
-            GL.clear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+            GL.clear(GL.COLOR_BUFFER_BIT | GL.DEPTH_BUFFER_BIT);
 
             // Draw triangle
-            GL.bindTexture(GL_TEXTURE_2D, tex);
+            GL.bindTexture(GL.TEXTURE_2D, tex);
             GL.useProgram(program);
             GL.uniform1f(colorFactor, (float) ((Math.sin(GLFW.getTime() * 2) + 1 * 0.5) * 0.6 + 0.4));
             GL.bindVertexArray(vao);
-            GL.drawElements(GL_TRIANGLES, 6, GL_UNSIGNED_BYTE, MemoryAddress.NULL);
+            GL.drawElements(GL.TRIANGLES, 6, GL.UNSIGNED_BYTE, MemorySegment.NULL);
             GL.bindVertexArray(0);
             GL.useProgram(0);
-            GL.bindTexture(GL_TEXTURE_2D, 0);
+            GL.bindTexture(GL.TEXTURE_2D, 0);
 
             GLFW.swapBuffers(window);
 
