@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022 Overrun Organization
+ * Copyright (c) 2022-2023 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -12,19 +12,12 @@
  *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
  */
 
 package org.overrun.glib.demo.opengl;
 
 import org.joml.Matrix4f;
+import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.gl.GL;
 import org.overrun.glib.gl.GLLoader;
 import org.overrun.glib.gl.GLUtil;
@@ -32,13 +25,9 @@ import org.overrun.glib.glfw.Callbacks;
 import org.overrun.glib.glfw.GLFW;
 import org.overrun.glib.glfw.GLFWErrorCallback;
 import org.overrun.glib.joml.Matrixn;
+import org.overrun.glib.util.MemoryStack;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.SegmentAllocator;
-
-import static org.overrun.glib.gl.GLConstC.*;
+import java.lang.foreign.*;
 
 /**
  * Tests OpenGL 3.3 instanced rendering
@@ -49,18 +38,18 @@ import static org.overrun.glib.gl.GLConstC.*;
 public class GL33Test {
     private static final int INSTANCE_COUNT = square(10);
     private static final String WND_TITLE = "OpenGL 3.3";
-    private MemoryAddress window;
+    private MemorySegment window;
     private int program;
     private int rotationMat;
     private int vao, vbo, ebo, mbo;
-    private MemorySession debugProc;
+    private Arena debugProc;
 
     private static int square(int x) {
         return x * x;
     }
 
     public void run() {
-        try (var arena = MemorySession.openShared()) {
+        try (var arena = Arena.openShared()) {
             init(arena);
             load(arena);
         }
@@ -68,9 +57,10 @@ public class GL33Test {
 
         GL.deleteProgram(program);
         GL.deleteVertexArray(vao);
-        GL.deleteBuffer(vbo);
-        GL.deleteBuffer(ebo);
-        GL.deleteBuffer(mbo);
+        // Optimization when many buffer objects need to be deleted
+        try (final MemoryStack stack = MemoryStack.stackPush()) {
+            GL.deleteBuffers(3, stack.ints(vbo, ebo, mbo));
+        }
 
         Callbacks.free(window);
         GLFW.destroyWindow(window);
@@ -80,7 +70,7 @@ public class GL33Test {
         GLFW.setErrorCallback(null);
     }
 
-    private void init(MemorySession arena) {
+    private void init(Arena arena) {
         GLFWErrorCallback.createPrint().set();
         if (!GLFW.init()) {
             throw new IllegalStateException("Unable to initialize GLFW");
@@ -91,8 +81,8 @@ public class GL33Test {
         GLFW.windowHint(GLFW.CONTEXT_VERSION_MAJOR, 3);
         GLFW.windowHint(GLFW.CONTEXT_VERSION_MINOR, 3);
         GLFW.windowHint(GLFW.OPENGL_PROFILE, GLFW.OPENGL_CORE_PROFILE);
-        window = GLFW.createWindow(arena, 640, 480, WND_TITLE, MemoryAddress.NULL, MemoryAddress.NULL);
-        if (window == MemoryAddress.NULL)
+        window = GLFW.createWindow(arena, 640, 480, WND_TITLE, MemorySegment.NULL, MemorySegment.NULL);
+        if (window.address() == RuntimeHelper.NULL)
             throw new RuntimeException("Failed to create the GLFW window");
         GLFW.setKeyCallback(window, (handle, key, scancode, action, mods) -> {
             if (key == GLFW.KEY_ESCAPE && action == GLFW.RELEASE) {
@@ -117,15 +107,15 @@ public class GL33Test {
         GLFW.showWindow(window);
     }
 
-    private void load(MemorySession arena) {
+    private void load(Arena arena) {
         if (GLLoader.loadConfined(true, GLFW::getProcAddress) == null)
             throw new IllegalStateException("Failed to load OpenGL");
 
         debugProc = GLUtil.setupDebugMessageCallback();
         GL.clearColor(0.4f, 0.6f, 0.9f, 1.0f);
         program = GL.createProgram();
-        int vsh = GL.createShader(GL_VERTEX_SHADER);
-        int fsh = GL.createShader(GL_FRAGMENT_SHADER);
+        int vsh = GL.createShader(GL.VERTEX_SHADER);
+        int fsh = GL.createShader(GL.FRAGMENT_SHADER);
         GL.shaderSource(arena, vsh, """
             #version 330
 
@@ -167,25 +157,25 @@ public class GL33Test {
         vao = GL.genVertexArray();
         GL.bindVertexArray(vao);
         vbo = GL.genBuffer();
-        GL.bindBuffer(GL_ARRAY_BUFFER, vbo);
-        GL.bufferData(arena, GL_ARRAY_BUFFER, new float[]{
+        GL.bindBuffer(GL.ARRAY_BUFFER, vbo);
+        GL.bufferData(arena, GL.ARRAY_BUFFER, new float[]{
             // Vertex          Color
             -0.5f, 0.5f, 0.0f, 1.0f, 0.0f, 0.0f,
             -0.5f, -0.5f, 0.0f, 0.0f, 0.0f, 1.0f,
             0.5f, -0.5f, 0.0f, 1.0f, 1.0f, 0.0f,
             0.5f, 0.5f, 0.0f, 0.0f, 1.0f, 0.0f
-        }, GL_STATIC_DRAW);
+        }, GL.STATIC_DRAW);
         ebo = GL.genBuffer();
-        GL.bindBuffer(GL_ELEMENT_ARRAY_BUFFER, ebo);
-        GL.bufferData(arena, GL_ELEMENT_ARRAY_BUFFER, new byte[]{
+        GL.bindBuffer(GL.ELEMENT_ARRAY_BUFFER, ebo);
+        GL.bufferData(arena, GL.ELEMENT_ARRAY_BUFFER, new byte[]{
             0, 1, 2, 2, 3, 0
-        }, GL_STATIC_DRAW);
+        }, GL.STATIC_DRAW);
         GL.enableVertexAttribArray(0);
         GL.enableVertexAttribArray(1);
-        GL.vertexAttribPointer(0, 3, GL_FLOAT, false, 24, MemoryAddress.NULL);
-        GL.vertexAttribPointer(1, 3, GL_FLOAT, false, 24, MemoryAddress.ofLong(12));
+        GL.vertexAttribPointer(0, 3, GL.FLOAT, false, 24, MemorySegment.NULL);
+        GL.vertexAttribPointer(1, 3, GL.FLOAT, false, 24, MemorySegment.ofAddress(12));
         mbo = GL.genBuffer();
-        GL.bindBuffer(GL_ARRAY_BUFFER, mbo);
+        GL.bindBuffer(GL.ARRAY_BUFFER, mbo);
         var mat = new Matrix4f();
         var iseq = MemoryLayout.sequenceLayout(
             INSTANCE_COUNT,
@@ -209,26 +199,26 @@ public class GL33Test {
                 i * Matrixn.MAT4F.byteSize(),
                 matrices);
         }
-        GL.bufferData(GL_ARRAY_BUFFER, matrices, GL_STATIC_DRAW);
+        GL.bufferData(GL.ARRAY_BUFFER, matrices, GL.STATIC_DRAW);
         GL.enableVertexAttribArray(2);
         GL.enableVertexAttribArray(3);
         GL.enableVertexAttribArray(4);
         GL.enableVertexAttribArray(5);
-        GL.vertexAttribPointer(2, 4, GL_FLOAT, false, 64, MemoryAddress.NULL);
-        GL.vertexAttribPointer(3, 4, GL_FLOAT, false, 64, MemoryAddress.ofLong(16));
-        GL.vertexAttribPointer(4, 4, GL_FLOAT, false, 64, MemoryAddress.ofLong(32));
-        GL.vertexAttribPointer(5, 4, GL_FLOAT, false, 64, MemoryAddress.ofLong(48));
+        GL.vertexAttribPointer(2, 4, GL.FLOAT, false, 64, MemorySegment.NULL);
+        GL.vertexAttribPointer(3, 4, GL.FLOAT, false, 64, MemorySegment.ofAddress(16));
+        GL.vertexAttribPointer(4, 4, GL.FLOAT, false, 64, MemorySegment.ofAddress(32));
+        GL.vertexAttribPointer(5, 4, GL.FLOAT, false, 64, MemorySegment.ofAddress(48));
         GL.vertexAttribDivisor(2, 1);
         GL.vertexAttribDivisor(3, 1);
         GL.vertexAttribDivisor(4, 1);
         GL.vertexAttribDivisor(5, 1);
-        GL.bindBuffer(GL_ARRAY_BUFFER, 0);
+        GL.bindBuffer(GL.ARRAY_BUFFER, 0);
         GL.bindVertexArray(0);
     }
 
     private void loop() {
         var matrix = new Matrix4f();
-        var pRotationMat = Matrixn.allocate(SegmentAllocator.implicitAllocator(), matrix);
+        var pRotationMat = Matrixn.allocate(SegmentAllocator.nativeAllocator(SegmentScope.auto()), matrix);
 
         double lastTime;
         double time;
@@ -237,7 +227,7 @@ public class GL33Test {
         while (!GLFW.windowShouldClose(window)) {
             time = GLFW.getTime();
 
-            GL.clear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+            GL.clear(GL.COLOR_BUFFER_BIT | GL.DEPTH_BUFFER_BIT);
 
             // Draw triangle
             GL.useProgram(program);
@@ -247,7 +237,7 @@ public class GL33Test {
 
             GL.uniformMatrix4fv(rotationMat, 1, false, pRotationMat);
             GL.bindVertexArray(vao);
-            GL.drawElementsInstanced(GL_TRIANGLES, 6, GL_UNSIGNED_BYTE, MemoryAddress.NULL, INSTANCE_COUNT);
+            GL.drawElementsInstanced(GL.TRIANGLES, 6, GL.UNSIGNED_BYTE, MemorySegment.NULL, INSTANCE_COUNT);
             GL.bindVertexArray(0);
             GL.useProgram(0);
 
@@ -258,7 +248,7 @@ public class GL33Test {
             lastTime = time;
             time = GLFW.getTime();
             dt = time - lastTime;
-            try (var arena = MemorySession.openShared()) {
+            try (var arena = Arena.openConfined()) {
                 GLFW.setWindowTitle(arena, window, WND_TITLE + " Delta time: " + dt + ", Frequency: " + (int) (1.0 / dt));
             }
         }
